Do not use 'new Long()'
Instantiating a long through new is inefficient, use Long.valueOf()
instead.

Change-Id: I7c520334e3a0012e7938a11fc587bfa894afbcf4
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>