@@ -82,7 +82,7 @@ public final class SidLabelIndexParser {
     public static SidLabelIndex parseSidLabelIndex(final Size length, final ByteBuf buffer) {
         switch (length) {
         case LABEL:
-            return new LocalLabelCaseBuilder().setLocalLabel(new MplsLabel(new Long(buffer.readUnsignedMedium() & LABEL_MASK))).build();
+            return new LocalLabelCaseBuilder().setLocalLabel(new MplsLabel(Long.valueOf(buffer.readUnsignedMedium() & LABEL_MASK))).build();
         case SID:
             return new SidCaseBuilder().setSid(buffer.readUnsignedInt()).build();
         case IPV6_ADD:
